[package]
name = "cianticblog"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

# unstable contains async-process
async-std = { version = "1.8", features = [ "attributes", "unstable" ] }

yew = "0.17"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
pulldown-cmark = "0.8.0"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
url = { version = "2.2", features = ["serde"] }
glob = "0.3"

# r2d2: Provides ConnectionManager and ability to pool DB connections for multi-threading
r2d2 = "0.8"